--- a/views/cargarArchivo/asignacionesDiners.twig
+++ b/views/cargarArchivo/asignacionesDiners.twig
@@ -9,7 +9,7 @@
 					</div>
 					<div class="card-body">
 						<p style="text-align: justify;">
-							Permite la carga del archivo de saldos diarios.
+							Permite la carga del archivo de asignaciones enviado por DINERS.
 						</p>
 						<fieldset id="campos">
 							<div class=" row mb-4">
