--- a/views/reportes/negociacionesEjecutivo.twig
+++ b/views/reportes/negociacionesEjecutivo.twig
@@ -14,7 +14,7 @@
 				<div class="table-responsive">
 					<table class="table border table-striped table-bordered table-sm mb-0">
 						<thead>
-						<tr>
+						<tr style="background-color: #95b8f6;">
 							<th>MARCACEDULA</th>
 							<th>FECHA</th>
 							<th>MARCA</th>
