--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -38,7 +38,7 @@
 									<td>
 										<label class="custom-control custom-radio">
 											<input type="radio" class="custom-control-input" name="example-radios"
-											       value="option1" checked>
+												   v-model="t.bandera" >
 											<span class="custom-control-label"></span>
 										</label>
 									</td>
@@ -2634,6 +2634,7 @@
                         var data = {
                             model: self.model,
                             seguimiento: self.seguimiento,
+							telefono: self.telefono,
                             aplicativo_diners: self.aplicativo_diners,
                             aplicativo_diners_tarjeta_diners: self.aplicativo_diners_tarjeta_diners,
                             aplicativo_diners_tarjeta_discover: self.aplicativo_diners_tarjeta_discover,
