--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -1,8 +1,7 @@
 {% extends 'layout.twig' %}
 {% block content %}
 	<div id="app">
-		<form method="POST" action="{{ root }}/institucion/guardar" id="form-edit-cliente" class="form-horizontal"
-		      autocomplete="off" enctype="multipart/form-data">
+		<form method="POST" action="{{ root }}/producto/guardarSeguimiento" id="form-edit-seguimiento" class="form-horizontal" autocomplete="off" enctype="multipart/form-data">
 			<div class="card">
 				<div class="card-header">
 					<h4 class="card-title">CLIENTE</h4>
@@ -23,33 +22,37 @@
 					<div class=" row mb-4">
 						<label for="inputName" class="col-md-2 form-label">Teléfonos</label>
 						<div class="col-md-10">
-							<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0">
+							<table>
+								<tr>
+									<td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
+									<td style="border: 1px solid white;">Número ORO</td>
+								</tr>
+							</table>
+							<table class="table border table-bordered table-sm mb-0">
 								<thead>
 								<tr>
-									<th>Número Oro</th>
-									<th>Tipo</th>
-									<th>Descripción</th>
-									<th>Teléfono</th>
-									<th>Origen</th>
+									<th style="width: 33%;">Marcación / Teléfono</th>
+									<th style="width: 33%;">Descripción</th>
+									<th style="width: 33%;">Origen</th>
 								</tr>
 								</thead>
 								<tbody>
 								<tr v-for="t in telefono">
-									<td>
+									<td style="text-align: center;">
 										<label class="custom-control custom-radio">
-											<input type="radio" class="custom-control-input" name="example-radios"
-											       value="option1" checked>
-											<span class="custom-control-label"></span>
+											<input type="radio" class="custom-control-input required" name="example-radios" v-model="seguimiento.telefono_id" :value="t.id">
+
+											<template v-if="t.bandera == 1">
+												<span style="background-color: #CCFFCC;" class="custom-control-label" v-html="t.telefono"></span>
+											</template>
+											<template v-else>
+												<span class="custom-control-label" v-html="t.telefono"></span>
+											</template>
+
 										</label>
 									</td>
 									<td>
-										<span style="text-transform: uppercase;" class="form-control-plaintext" v-html="t.tipo"></span>
-									</td>
-									<td>
 										<span style="text-transform: uppercase;" class="form-control-plaintext" v-html="t.descripcion"></span>
-									</td>
-									<td>
-										<span style="text-transform: uppercase;" class="form-control-plaintext" v-html="t.telefono"></span>
 									</td>
 									<td>
 										<span style="text-transform: uppercase;" class="form-control-plaintext" v-html="t.origen"></span>
@@ -173,9 +176,9 @@
 					</div>
 				</div>
 			</div>
-		</form>
 
-		<form method="POST" action="{{ root }}/producto/guardarSeguimiento" id="form-edit-seguimiento" class="form-horizontal" autocomplete="off" enctype="multipart/form-data">
+
+
 			<div class="card">
 				<div class="card-header">
 					<h4 class="card-title">SEGUIMIENTO</h4>
