--- a/views/reportes/campoTelefonia.twig
+++ b/views/reportes/campoTelefonia.twig
@@ -126,7 +126,7 @@
                         form[0].reset();
                         self.consultar();
                     });
-                    self.consultar();
+                    // self.consultar();
                 });
             }
         });
