--- a/views/reportes/negociacionesEjecutivo.twig
+++ b/views/reportes/negociacionesEjecutivo.twig
@@ -159,7 +159,7 @@
                         form[0].reset();
                         self.consultar();
                     });
-                    self.consultar();
+                    // self.consultar();
                 });
             }
         });
