--- a/views/reportes/produccionPlaza.twig
+++ b/views/reportes/produccionPlaza.twig
@@ -232,7 +232,7 @@
                         form[0].reset();
                         self.consultar();
                     });
-                    self.consultar();
+                    // self.consultar();
                 });
             }
         });
