--- a/views/reportes/informeJornada.twig
+++ b/views/reportes/informeJornada.twig
@@ -201,7 +201,7 @@
                         form[0].reset();
                         self.consultar();
                     });
-                    self.consultar();
+                    // self.consultar();
                 });
             }
         });
