--- a/views/producto/verAcuerdo.twig
+++ b/views/producto/verAcuerdo.twig
@@ -1,6 +1,6 @@
 <div id="appAcuerdo">
 	<div class="table-responsive" style="scrollbar-color: red yellow;">
-		<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0 font-size: 10px;">
+		<table class="table border table-striped table-bordered table-sm mb-0" style="font-size: 12px;">
 			<thead>
 			<tr>
 				<template v-if="aplicativo_diners_tarjeta_diners.id > 0">
