--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -2566,8 +2566,12 @@
                 calcularValoresDiners: function () {
                     var self = this;
                     if(self.aplicativo_diners_tarjeta_diners.unificar_deudas == 'SI') {
-                        self.aplicativo_diners_tarjeta_interdin.unificar_deudas = 'NO';
-                        self.aplicativo_diners_tarjeta_discover.unificar_deudas = 'NO';
+                        if(self.aplicativo_diners_tarjeta_interdin.length > 0) {
+                            self.aplicativo_diners_tarjeta_interdin.unificar_deudas = 'NO';
+                        }
+                        if(self.aplicativo_diners_tarjeta_discover.length > 0) {
+                            self.aplicativo_diners_tarjeta_discover.unificar_deudas = 'NO';
+                        }
                         self.calcularValoresInterdin();
                         self.calcularValoresDiscover();
                     }
@@ -2592,8 +2596,12 @@
                 calcularValoresInterdin: function () {
                     var self = this;
                     if(self.aplicativo_diners_tarjeta_interdin.unificar_deudas == 'SI') {
-                        self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
-                        self.aplicativo_diners_tarjeta_discover.unificar_deudas = 'NO';
+                        if(self.aplicativo_diners_tarjeta_diners.length > 0) {
+                            self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
+                        }
+                        if(self.aplicativo_diners_tarjeta_discover.length > 0) {
+                            self.aplicativo_diners_tarjeta_discover.unificar_deudas = 'NO';
+                        }
                         self.calcularValoresDiscover();
                         self.calcularValoresDiners();
                     }
@@ -2620,8 +2628,12 @@
                 calcularValoresDiscover: function () {
                     var self = this;
                     if(self.aplicativo_diners_tarjeta_discover.unificar_deudas == 'SI') {
-                        self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
-                        self.aplicativo_diners_tarjeta_interdin.unificar_deudas = 'NO';
+                        if(self.aplicativo_diners_tarjeta_diners.length > 0) {
+                            self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
+                        }
+                        if(self.aplicativo_diners_tarjeta_interdin.length > 0) {
+                            self.aplicativo_diners_tarjeta_interdin.unificar_deudas = 'NO';
+                        }
                         self.calcularValoresDiners();
                         self.calcularValoresInterdin();
                     }
