--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -2596,14 +2596,14 @@
                 calcularValoresInterdin: function () {
                     var self = this;
                     if(self.aplicativo_diners_tarjeta_interdin.unificar_deudas == 'SI') {
-                        if(self.aplicativo_diners_tarjeta_diners.length > 0) {
-                            self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
-                        }
+                        // if(self.aplicativo_diners_tarjeta_diners.length > 0) {
+                        //     self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
+                        // }
                         if(self.aplicativo_diners_tarjeta_discover.length > 0) {
                             self.aplicativo_diners_tarjeta_discover.unificar_deudas = 'NO';
                         }
                         self.calcularValoresDiscover();
-                        self.calcularValoresDiners();
+                        // self.calcularValoresDiners();
                     }
                     var data = {
                         data: self.aplicativo_diners_tarjeta_interdin,
