--- a/views/reportes/filtrosNegociacionesAutomatica.twig
+++ b/views/reportes/filtrosNegociacionesAutomatica.twig
@@ -6,6 +6,26 @@
 		<form id="filtros">
 			<div class="row ">
 				<div class="col-sm-3">
+					<b>Canal</b> <br>
+					<div class="input-group">
+						<select class="form-control form-select select2" name="canal_usuario" id="canal_usuario">
+							<option value=""></option>
+							<option v-for="(v,k) in canal_usuario" v-html="v" :value="k"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
+					<b>Plaza</b> <br>
+					<div class="input-group">
+						<select class="form-control form-select select2" name="plaza_usuario" id="plaza_usuario">
+							<option value=""></option>
+							<option v-for="(v,k) in plaza_usuario" v-html="v" :value="k"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
 					<b>Fecha Inicio</b> <br>
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
